--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+        <div class="container" id="nav-container">
+            <nav class="navbar navbar-expand-lg fixed-top bg-dark navbar-dark">
                 <a href="#" class="navbar-brand">
-                    <img src="img/hdcagency_logo.svg" width="70" alt="hdc Agency" title="hdc Agency"> hDC Agency
+                    <img src="img/hdcagency_logo.svg" id="logo" alt="hdc Agency" title="hdc Agency"> hDC Agency
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-links" aria-controls="navbar-links" aria-expanded="false" aria-label="toggle-navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -43,6 +43,51 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div class="container-fluid">
+            <div id="mainSlider" class="carousel slide" data-ride="carousel">
+                <!--<ol class="carousel-indicators">
+                    <li data-target="#mainSlider" data-slide-to="0" class="active"></li>
+                    <li data-target="#mainSlider" data-slide-to="1"></li>
+                    <li data-target="#mainSlider" data-slide-to="2"></li>
+                </ol>-->
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/banner1.png" class="d-block w-100" alt="Projetos de e-commerce">
+                        <div class="carousel-caption d-md-block">
+                            <h2>Quer criar um e-commerce?</h2>
+                            <p>Conte conosco, temos mais 30 lojas no portifólio</p>
+                            <a href="#" class="btn btn-info">Ver portifólio</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/banner2.png" class="d-block w-100" alt="Engenharia de Software">
+                        <div class="carousel-caption d-md-block">
+                            <h2>Esta querendo tirar o projeto do papel?</h2>
+                            <p>Nossa equipe de engenharia de software está pronta para lhe atender.</p>
+                            <a href="#" class="btn btn-info">Entre em contato</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/banner3.png" class="d-block w-100" alt="Manutenção em Software">
+                        <div class="carousel-caption d-md-block">
+                            <h2>Está buscando manutenção no seu software?</h2>
+                            <p>A hDC Agency conta com engenheiros altamente qualificados para resolver seu problema.</p>
+                            <a href="#" class="btn btn-info">Entre em contato</a>
+                        </div>
+                    </div>
+                </div>
+                <a href="#mainSlider" class="carousel-control-prev" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Anterior</span>
+                </a>
+                <a href="#mainSlider" class="carousel-control-next" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Proximo</span>
+                </a>
+            </div>
+        </div>
+    </main>
     <script src="script.js"></script>
     <footer></footer>
 </body>
