--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
                     <div class="navbar-nav">
-                        <a href="#" class="nav-item nav-link" id="home-menu">Home</a>
-                        <a href="#" class="nav-item nav-link" id="about-menu">A agência</a>
-                        <a href="#" class="nav-item nav-link" id="services-menu">Serviços</a>
-                        <a href="#" class="nav-item nav-link" id="team-menu">Time</a>
-                        <a href="#" class="nav-item nav-link" id="portifolio-menu">Projetos</a>
-                        <a href="#" class="nav-item nav-link" id="contact-menu">Contato</a>
+                        <a href="#" class="nav-link" id="home-menu">Home</a>
+                        <a href="#about-area" class="nav-link" id="about-menu">A agência</a>
+                        <a href="#" class="nav-link" id="services-menu">Serviços</a>
+                        <a href="#" class="nav-link" id="team-menu">Time</a>
+                        <a href="#" class="nav-link" id="portifolio-menu">Projetos</a>
+                        <a href="#" class="nav-link" id="contact-menu">Contato</a>
                     </div>
                 </div>
             </nav>
@@ -46,11 +46,6 @@
     <main>
         <div class="container-fluid">
             <div id="mainSlider" class="carousel slide" data-ride="carousel">
-                <!--<ol class="carousel-indicators">
-                    <li data-target="#mainSlider" data-slide-to="0" class="active"></li>
-                    <li data-target="#mainSlider" data-slide-to="1"></li>
-                    <li data-target="#mainSlider" data-slide-to="2"></li>
-                </ol>-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="img/banner1.png" class="d-block w-100" alt="Projetos de e-commerce">
@@ -85,6 +80,34 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Proximo</span>
                 </a>
+            </div>
+            <div id="about-area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 class="main-title">Sobre a hDC Agency</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/agencia.jpg" class="img-fluid" alt="Agência hDC">
+                        </div>
+                        <div class="col-md-6">
+                            <h3 class="about-title">Uma agência que pensa no futuro</h3>
+                            <p>Nossos projetos são adaptados ao cliente e seu propósito.</p>
+                            <p>Após a especificação do projetos os arquitetos de software definirão as melhores tecnologias para seu projeto.</p>
+                            <p>E nossos designers trabalharão na sua interface/layout para impulsionar o negócio.</p>
+                            <p>Veja outros diferenciais:</p>
+                            <ul id="about-list">
+                                <li><i class="fas fa-check"></i> Utilização de Machine Learning / AI</li>
+                                <li><i class="fas fa-check"></i> Layout responsivo para todos os dispositivos</li>
+                                <li><i class="fas fa-check"></i> Integração com diversos sistemas do mercado</li>
+                                <li><i class="fas fa-check"></i> Sistema de pagamento próprio</li>
+                                <li><i class="fas fa-check"></i> Desenvolvimento com metodologia ágil</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
